# f90wrap

./: .cirrus.yml  .gitignore  .travis.yml  CHANGELOG.md  README  README.md  README.rst  TRIAGE_PLAN.md  copyrightText.txt  env.sh  get_version.py  meson.build  parser.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  transform.py  update-license.py  update-readme.py
.github/workflows/: build-wheels.yml  docs.yml  prepare-build.sh  python-package.yml  python-publish.yml  quip-regression.yml
docs/: Makefile  api.rst  conf.py  index.rst  usage.rst
docs/apidocs/: f90wrap.fortran.rst  f90wrap.latex.rst  f90wrap.patch_f2py.rst  f90wrap.pywrapgen.rst  f90wrap.rst  f90wrap.transform.rst
docs/tutorials/: f90wrap-demo-feb-2020.ipynb  f90wrap-demo.ipynb  kermode-csc-warwick-nov-2015.ipynb  si-vac.gpw
examples/: .gitignore  CMakeLists.txt  Makefile  make.inc  make.meson.inc  meson.build.directc.template  meson.build.template
examples/arrayderivedtypes/: .gitignore  Makefile  Makefile.bak  Makefile.meson  arrayderivedtype.py  test.f90  tests.py
examples/arrays/: .gitignore  Makefile  Makefile.bak  Makefile.meson  README.md  kind_map  library.f90  memory_profile.py  parameters.f90  tests.py
examples/arrays_fixed/: .gitignore  Makefile  Makefile.bak  Makefile.meson  library.f  memory_profile.py  parameters.f  tests.py
examples/arrays_in_derived_types_issue50/: .gitignore  Makefile  Makefile.bak  Makefile.meson  kind_map  test.f90  tests.py
examples/auto_raise_error/: Makefile  Makefile.meson  main.f90  tests.py
examples/callback_print_function_issue93/: Makefile  Makefile.meson  README.md  callback_print_output_python.ipynb  caller.f90  cback.f90  kind_map  tests.py
examples/class_names/: .gitignore  Makefile  Makefile.meson  class_names.json  test.f90  tests.py
examples/cylinder/: .gitignore  DNAD.f90  DNADHeaders.h  Makefile  Makefile.meson  README  cyldnad.f90  cylinder.ipynb  kind_map  tests.py
examples/decoded_strings/: Makefile  Makefile.meson  main.f90  tests.py
examples/default_i8/: Makefile  Makefile.meson  kind_map  test.f90  tests.py
examples/derived-type-aliases/: Makefile  Makefile.meson  mytype_mod.f90  othertype_mod.f90  tests.py
examples/derivedtypes/: .gitignore  Makefile  Makefile.meson  README.md  kind_map  library.f90  memory_profile.py  tests.py  tests_pkg.py
examples/derivedtypes_procedure/: .gitignore  Makefile  Makefile.meson  library.f90  tests.py
examples/directc_prototype/: Makefile  test_module.f90
examples/docstring/: Makefile  Makefile.meson  docstring_test.py  main.f90
examples/dump_package/: Makefile  Makefile.meson  array_type.f90  main.f90  tests.py
examples/elemental/: .f2py_f2cmap  .gitignore  Makefile  Makefile.meson  elemental_module.f90  test.py
examples/errorbinding/: Makefile  Makefile.bak  Makefile.meson  README.md  datatypes.f90  parameters.f90  tests.py  tests_pkg.py
examples/example-arrays/: Makefile  library.f90  parameters.f90  tests.py
examples/example-charstrings/: Makefile  README.md  kind_map  stringutils.f90  tests.py
examples/example-derivedtypes/: Makefile  datatypes.f90  tests.py
examples/example-strings/: Makefile  tests.py
examples/example2/: .gitignore  Makefile  Makefile.meson  README  kind_map  test_module.py  test_package.py
examples/extends/: .gitignore  Makefile  Makefile.meson  compile_me  testextends.f90
examples/f2f_kind/: Makefile  Makefile.meson  main.f90  tests.py
examples/f2py_string_input/: Makefile  Makefile.meson  main.f90  test.py
examples/fixed_1D_derived_type_array_argument/: Makefile  Makefile.meson  functions.f90  tests.py
examples/fortran_oo/: Makefile  Makefile.meson  base_poly.f90  kind.map  main-oo.f90  oowrap_test.py
examples/intent_out_size/: Makefile  main.f90  tests.py
examples/interface/: .gitignore  Makefile  Makefile.meson  README.md  example.f90  example.py  test.py  test_pkg.py
examples/issue105_function_definition_with_empty_lines/: Makefile  main.f90  run.py
examples/issue206_subroutine_oldstyle/: Makefile  run.py  subroutine_oldstyle.f
examples/issue227_allocatable/: Makefile  alloc_output.f90  run.py
examples/issue235_allocatable_classes/: Makefile  Makefile.bak  Makefile.meson  f90wrap_myclass.f90  f90wrap_myclass_factory.f90  myclass.f90  myclass_factory.f90  mytype.f90  run.py
examples/issue235_classes/: Makefile  (+2 more)
examples/reserved_words/: CMakeLists.txt  Makefile  driver.py  highest.f90  kind_map  test.py  test_exe
examples/reserved_words/cmake/Modules/: FindOpenMP_Fortran.cmake  Preprocess_definition.cmake  SetCompileFlag.cmake  SetFortranFlags.cmake  SetParallelizationLibrary.cmake  SetUpLAPACK.cmake  f90wrap.cmake  file_list.ps1  final.ps1  set_compiler_flags.cmake  win32_powershell.cmake
examples/reserved_words/src/: CMakeLists.txt  driver.F90  highest.F90
examples/reserved_words/src/MathOps/: chkder.f  dgeco.f  dgedi.f  dogleg.f  dpmpar.f  enorm.f  fdjac1.f  fdjac2.f  hybrd.f  hybrd1.f  hybrj.f  hybrj1.f  lmder.f  lmder1.f  lmdif.f  lmdif1.f  lmpar.f  lmstr.f  lmstr1.f  qform.f  qrfac.f  qrsolv.f  r1mpyq.f  r1updt.f  rwupdt.f  sdot.f  sgeco.f  sgedi.f  sgefa.f  sger.f  spmpar.f  sswap.f  strsm.f
examples/reserved_words/src/pyint_files/: highest.F90  lapack_wrappers.F90
f90wrap/: __init__.py  __main__.py  abort_buffers.c  arraydatamodule.c  build.py  codegen.py  directc.py  directc_cgen.py  f90.py  f90wrapgen.py  fortran.py  fortrantype.py  latex.py  meson.build  numpy_utils.py  parser.py  patch_f2py.py  python.py  pywrapgen.py  runtime.py  setuptools_ext.py  six.py  sizeoffortran.f90  transform.py  wrapgen.py
f90wrap/directc_cgen/: __init__.py  arguments.py  arguments_array.py  arguments_scalar.py  derived_types.py  module_helpers.py  module_helpers_array.py  procedures.py  procedures_return.py  utils.py
f90wrap/scripts/: f2py_f90wrap.py  f90doc.py  main.py
scripts/: f2py-f90wrap  f90doc  f90wrap
test/: __init__.py  test_directc.py  test_directc_e2e.py  test_parser.py  test_pywrapgen.py  test_setuptools_integration.py  test_transform.py
tools/: directc_audit.py  openblas_support.py
(+289 files in other folders)
