[metadata]
name = f90wrap
version = attr: f90wrap.__version__
description = Fortran to Python interface generator with derived type support

author = James Kermode
author_email = james.kermode@gmail.com

url = https://github.com/jameskermode/f90wrap
long_description = file: README.md
long_description_content_type= text/markdown

python_requires = >=3.6

[options]
install_requires =
    numpy>=1.13,<1.24

packages =
    f90wrap
    f90wrap/scripts
scripts =
    scripts/f90doc
    scripts/f90wrap
    scripts/f2py-f90wrap
